fix for missing color box

--- a/web-app/css/ed/messages-errors.css
+++ b/web-app/css/ed/messages-errors.css
@@ -311,3 +311,8 @@ h3 {
 	margin-top: 100px;
 	
 }
+
+.color-box {
+	width: 100px;
+	height: 100px;
+}
